tests/compile-fail/unaligned_pointers/reference_to_packed.stderr
error: Undefined Behavior: accessing memory with alignment 1, but alignment 4 is required
  --> $DIR/reference_to_packed.rs:19:17
   |
LL |         let i = *p; //~ERROR alignment 4 is required
   |                 ^^ accessing memory with alignment 1, but alignment 4 is required
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/reference_to_packed.rs:19:17

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

